_notes/errbyfile/RenderManager.java.txt
ru\metaculture\protection\RenderManager.java:1843: error: incompatible 
types: boolean cannot be converted to int
            int var2 = true;
                       ^

  ru\metaculture\protection\RenderManager.java:1843: error: incompatible 
types: boolean cannot be converted to int
              int var2 = true;
                         ^
